# py-termz

./: CHANGELOG.md  README.md  pyproject.toml
termz/: __init__.py  cli.py  io.py  tui.py  utils.py
termz/cli/: output.py
termz/io/: __init__.py  app_state_storage.py  database.py  file.py  textfile.py
termz/tui/: __init__.py  custom_bindings.py  question_screen.py  theme_loader.py
termz/tui/custom_widgets/: custom_checkbox.py  custom_data_table.py  custom_selection.py  multiline_footer.py
termz/tui/themes/compact-gray/: theme.py
termz/tui/themes/mnml-deepblack/: theme.py
termz/util/: __init__.py  datetime.py  debug.py  index.py  logger.py  singleton.py  string.py  utils.py  validation.py  version.py
