[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termz"
version = "0.1.0"
description = "Terminal utilities for CLI, TUI, IO and general use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["rich"]
keywords = ["cli", "tui", "terminal", "io", "utils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/cgroening/py-termz"
Repository = "https://github.com/cgroening/py-termz"

[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportCallInDefaultInitializer = "none"
reportImplicitOverride = "none"
reportMissingTypeStubs = "none"
reportImplicitStringConcatenation = "none"
